# Dj-cars

./: .gitignore  README.md  commands.txt  task.txt
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/backend/cars/core/: celery.py  settings.py  urls.py
backend/backend/cars/gallery/: admin.py  models.py  services.py
backend/backend/cars/gallery/migrations/: 0001_initial.py
backend/backend/cars/integration/: admin.py  models.py  tasks.py
backend/backend/cars/integration/migrations/: 0001_initial.py  0002_datahub.py  0003_task_dh.py
backend/backend/cars/integration/services/: check_image.py  parsing.py  save_objects.py
backend/backend/cars/main/: admin.py  models.py  routers.py  serializers.py  views.py
backend/backend/cars/main/migrations/: 0001_initial.py  0002_brand_carmodel_dealercenter_alter_car_dc.py  0003_alter_car_dc_alter_car_model_alter_car_name_and_more.py  0004_car_instance_id.py  0005_car_brand_alter_car_model.py  0006_car_integration_url.py  0007_car_photos.py
backend/backend/cars/scripts/: main.py
backend/backend/cars/tasks/services/: parsing.py
backend/backend/cars/users/management/commands/: create_super.py
backend/backend/cars/users/migrations/: 0001_initial.py
