[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Tarlex <tarlex.py@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
djangorestframework = "^3.14.0"
bpython = "^0.23"
black = "^22.10.0"
pandas = "^1.5.0"
django-crontab = "^0.7.1"
celery = "^5.2.7"
redis = "^4.3.4"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
